--- a/css/style_kontakt.css
+++ b/css/style_kontakt.css
@@ -1,17 +1,44 @@
 
 /* specifik grid layout för varje sida */
-.container-projects{
+.container-contact{
   height: 100vh;
   display: grid;
-  grid-template-rows: 80px 1fr 20px 80px;
+  grid-template-rows: 80px 1fr 80px;
   grid-template-columns: auto;
   grid-template-areas: 
   "nav-bar" 
-  "project-card" 
-  "coming-soon"
+  "info" 
   "footer";
   font-size: 15px;
   font-family: "montserrat";
+}
+
+.contact-card{
+  grid-area: info;
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+  border: 3px solid #d4d4d4;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgb(103, 103, 103);
+}
+
+.contact-info{
+  margin: 100px;
+  text-align: center;
+  padding-right: 100px;
+}
+
+.contact-info h3{
+  font-size: 1.2rem;
+  margin: 10px;
+  font-weight: 500;
+}
+
+.contact-image img{
+  border-radius: 15px;
+  height: 100%;
+  width: 300px;
 }
 
 /* ser till så att aktiva sidan är understruken men ej hem */
@@ -19,51 +46,28 @@
   text-decoration: none;
 }
 
-.nav-item-projects{
+.nav-item-contact{
   text-decoration: underline;
 }
 
-.project-card{
-  grid-area: project-card;
-  display: flex;
-  margin: 30px;
-  border: 3px solid #d4d4d4;
-  border-radius: 15px;
-  box-shadow: 5px 5px 5px rgb(103, 103, 103);
-}
-
-.project-description{
-  text-align: center;
-  margin: 100px;
-  line-height: 20px;
-}
-
-.project-image img{
-  border-radius: 15px;
-  height: 100%;
-}
-
-/* använder id-selector för att inte påverka andra h3 */
-#more-projects{
-  grid-area: coming-soon;
-  text-align: center;
-  font-weight: 500;
-}
-
 /* responsiv design som gör card till kolumn-formad istälelt för rad-formad if that makes sense*/
-/* det finns bara ett card för tillfället */
 @media (max-width: 700px){
-  .project-card{
+  .contact-card{
     flex-direction: column;
   }
 
-  .project-image img{
+  .contact-image img{
     width: 100%;
   }
 
   /* försök att lägga texten någorlunda centrerad utan för mycket marginal åt något håll */
   /* behövs fler media quieries för att det ska passa med fler skärmar */
-  .project-description{
-    margin: 140px 40px 40px 40px;
+  .contact-info{
+    margin: 30px;
+    padding: 0;
+  }
+
+  .contact-info h3{
+    font-size: 1rem;
   }
 }
